fix issue when browing in mobile the city suggestions list was overlapping the search bar

--- a/src/App.css
+++ b/src/App.css
@@ -151,7 +151,6 @@ input[type="number"]:focus {
 }
 
 
-
 @media all and (max-width: 700px) {
   .App {
     padding: 20px 10px;
@@ -159,9 +158,5 @@ input[type="number"]:focus {
 
   .NumberOfEvents{
     margin-top: 30px;
-  }
-
-  .suggestions {
-    margin-top: -35px;
   }
 }
